tests/baselines/reference/interfacesWithPredefinedTypesAsNames.errors.txt
==== tests/cases/conformance/interfaces/interfaceDeclarations/interfacesWithPredefinedTypesAsNames.ts (5 errors) ====
    interface any { }
              ~~~
!!! error TS2427: Interface name cannot be 'any'
    interface number { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'number'
    interface string { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'
    interface boolean { }
              ~~~~~~~
!!! error TS2427: Interface name cannot be 'boolean'
    interface void {}
              ~~~~
!!! error TS1003: Identifier expected.